# rust-ledger-poc

./: Cargo.toml  README.md  import_multi_request.json  test.sh
examples/: get_firmware_version.rs  get_funding_address.rs  get_wallet_descriptor.rs  import_xpub_into_bitcoind.rs  print_wallet_descriptor.rs  sign_psbt.rs  sign_witness_transaction.rs
src/: btc.rs  lib.rs  transport.rs
src/transport/: hid.rs
