[package]
name = "ledger_nano_s_poc"
version = "0.1.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1"
bitcoin = "0.23.0"
bitcoins-ledger = { git = "https://github.com/summa-tx/bitcoins-rs", branch = "master" }
coins-bip32 = { git = "https://github.com/summa-tx/bitcoins-rs", branch = "master" }
bitcoins = { git = "https://github.com/summa-tx/bitcoins-rs", branch = "master" }
bitcoins-psbt = { git = "https://github.com/summa-tx/bitcoins-rs", branch = "master", features = ["ledger"] }
tokio = {version = "0.2", features = ["macros"]}
hex = "0.4.2"
